# discord_data

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: mypy.yml
discord_data/: __init__.py  __main__.py  common.py  error.py  merge.py  model.py  parse.py
scripts/: stats
