[metadata]
name = discord_data
version = 0.2.1
description = Library to parse the Discord GDPR export
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/seanbreckenridge/discord_data"
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = discord data

[options]
packages = find:
install_requires =
    click>=8.1.0
    simplejson
python_requires = >=3.8
include_package_data = True

[options.packages.find]
include = discord_data

[options.entry_points]
console_scripts =
    discord_data = discord_data.__main__:main

[options.package_data]
discord_data = py.typed

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[flake8]
ignore = E501,E402,W503,E266,E203
